--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EssyBanck</title>
+    <link rel="stylesheet" href="static/css/estilos.css">
+</head>
+<body>
+    <h1>Hola mundo </h1>
+</body>
 </html>
